--- a/ShoppingCart.csproj
+++ b/ShoppingCart.csproj
@@ -14,5 +14,8 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.5" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.5" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="wwwroot\media\products\" />
+	</ItemGroup>
 
 </Project>
